--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 chardet==2.3.0
 decorator==4.0.6
 Django==1.10.3
+django-crispy-forms==1.7.0
+django-extensions==1.9.8
 html5lib==0.999
 ipython==2.4.1
 pexpect==4.0.1
 ptyprocess==0.5
 simplegeneric==0.8.1
 six==1.10.0
+typing==3.6.2
